syntax = "proto3";

option csharp_namespace = "UserProtoBuf";

package user;

message User {
    int32 Id = 1;
    string Name = 2;
    string Email = 3;
}

service UserProto {
    rpc GetUser (GetUserRequest) returns (User);
    rpc ListUsers (ListUsersRequest) returns (stream User);
    rpc AddUsers(stream User) returns (HelloReply);
    rpc Chat(stream ChatMessage) returns (stream ChatMessage);
}

message GetUserRequest {
    int32 UserId = 1;
}

message ListUsersRequest { 
}

message HelloReply {
  string message = 1;
}

message ChatMessage {
  string text = 1;
}
 
